package ar.edu.utn.frc.tup.piii.model.enums;

public enum BotLevel { EASY, MEDIUM, HARD }
