package ar.edu.utn.frc.tup.piii.model.enums;

public enum CardType {
    INFANTRY,
    CAVALRY,
    CANNON,
    WILDCARD
}
