package ar.edu.utn.frc.tup.piii.model.enums;

public enum EventType {
    GAME_STARTED,
    PLAYER_JOINED,
    PLAYER_LEFT,
    TURN_STARTED,
    ATTACK_PERFORMED,
    TERRITORY_CONQUERED,
    CARDS_TRADED,
    REINFORCEMENTS_PLACED,
    FORTIFICATION_PERFORMED,
    TURN_ENDED,
    PLAYER_ELIMINATED,
    GAME_FINISHED,
    OBJECTIVE_COMPLETED
}