package ar.edu.utn.frc.tup.piii.model.enums;

public enum GamePhase {
    SETUP,
    REINFORCEMENT,
    ATTACK,
    FORTIFY,
    END_TURN
}